--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="container h-100 d-flex flex-column  flex-nowrap">
-            <nav class="d-flex justify-content-md-center justify-content-between align-items-center ">
+            <nav class="d-flex justify-content-center justify-content-md-between justify-content-xl-between align-items-center ">
                 <a href="" class="logo ">Street88</a>
                 <ul class=" d-flex justify-content-center">
                     <li><a href="" class="basket">Корзина <span>2</span></a></li>
